--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CurrencyPairInfoActivity"></activity>
-        <activity android:name=".FXListActivity">
+        <activity android:name=".CurrencyPairInfoActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".FXListActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
